force-app/main/default/objects/Alocacao__c/Alocacao__c.object-meta.xml
<CustomObject>
    <label>Alocação</label>
    <nameField>
        <label>Nome</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Alocações</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>