force-app/main/default/objects/Alocacao__c/fields/AlocacaoGestao__c.field-meta.xml
<CustomField>
    <fullName>AlocacaoGestao__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Alocação de gestão</label>
    <type>Checkbox</type>
</CustomField>