force-app/main/default/objects/Alocacao__c/fields/AlocacaoPrevista__c.field-meta.xml
<CustomField>
    <fullName>AlocacaoPrevista__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Vínculo com o item do planejamento comercial (Previsão).</description>
    <label>Alocação Prevista</label>
    <referenceTo>AlocacaoPrevista__c</referenceTo>
    <relationshipLabel>Alocações Realizadas</relationshipLabel>
    <relationshipName>AlocacoesRealizadas</relationshipName>
    <type>Lookup</type>
</CustomField>