force-app/main/default/objects/Alocacao__c/fields/CustoHr__c.field-meta.xml
<CustomField>
    <fullName>CustoHr__c</fullName>
    <label>Custo Hora</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>