force-app/main/default/objects/Alocacao__c/fields/CustoRealizado__c.field-meta.xml
<CustomField>
    <fullName>CustoRealizado__c</fullName>
    <label>Custo Realizado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>