force-app/main/default/objects/Alocacao__c/fields/CustoTotal__c.field-meta.xml
<CustomField>
    <fullName>CustoTotal__c</fullName>
    <label>Custo Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>