force-app/main/default/objects/Alocacao__c/fields/DataFimOriginal__c.field-meta.xml
<CustomField>
    <fullName>DataFimOriginal__c</fullName>
    <label>Data fim (original)</label>
    <required>true</required>
    <type>Date</type>
</CustomField>