force-app/main/default/objects/Alocacao__c/fields/Dias__c.field-meta.xml
<CustomField>
    <fullName>Dias__c</fullName>
    <label>Dias Úteis</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>