force-app/main/default/objects/Alocacao__c/fields/HorasAlocadas__c.field-meta.xml
<CustomField>
    <fullName>HorasAlocadas__c</fullName>
    <formula>Pessoa__r.HorasContrato__c * Percentual__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Horas alocadas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>