force-app/main/default/objects/Alocacao__c/fields/HorasAlocadasNumero__c.field-meta.xml
<CustomField>
    <fullName>HorasAlocadasNumero__c</fullName>
    <label>Horas/dia alocadas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>