force-app/main/default/objects/Alocacao__c/fields/HorasTotais__c.field-meta.xml
<CustomField>
    <fullName>HorasTotais__c</fullName>
    <label>Horas Totais</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>