force-app/main/default/objects/Alocacao__c/fields/NomeFormula__c.field-meta.xml
<CustomField>
    <fullName>NomeFormula__c</fullName>
    <formula>LEFT(Pessoa__r.Name + &quot; | &quot;+ Servico__r.Name,80)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome (Fórmula)</label>
    <type>Text</type>
</CustomField>