force-app/main/default/objects/Alocacao__c/fields/Pessoa__c.field-meta.xml
<CustomField>
    <fullName>Pessoa__c</fullName>
    <label>Pessoa</label>
    <referenceTo>Pessoa__c</referenceTo>
    <relationshipLabel>Alocações</relationshipLabel>
    <relationshipName>Alocacoes</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>