force-app/main/default/objects/Alocacao__c/fields/ReceitaTotal__c.field-meta.xml
<CustomField>
    <fullName>ReceitaTotal__c</fullName>
    <label>Receita Ponderada Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>