force-app/main/default/objects/Alocacao__c/fields/StatusFormula__c.field-meta.xml
<CustomField>
    <fullName>StatusFormula__c</fullName>
    <formula>IF(DataInicio__c &lt;= TODAY() &amp;&amp; ( DataFim__c &gt;= TODAY() || ISBLANK (DataFim__c)), &apos;Ativa&apos;, &apos;Inativa&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status (Fórmula)</label>
    <type>Text</type>
</CustomField>