force-app/main/default/objects/Alocacao__c/fields/TaxaVenda__c.field-meta.xml
<CustomField>
    <fullName>TaxaVenda__c</fullName>
    <label>Taxa de Venda</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>