force-app/main/default/objects/Alocacao__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Servico__c</columns>
    <columns>Percentual__c</columns>
    <columns>DataInicio__c</columns>
    <columns>DataFimOriginal__c</columns>
    <columns>DataFim__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>